--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,32 @@
-/.dazl/
-
-.DS_Store
-/node_modules/
-
-# React Router
-/.react-router/
-/build/
+# Environment variables
 .env
+.env.local
+.env.*.local
 
-.netlify
+# Dependencies
+node_modules/
+
+# Build outputs
+build/
+dist/
+.react-router/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# TypeScript
+*.tsbuildinfo
