--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "migrate": "tsx scripts/migrate-to-supabase.ts",
+    "test-supabase": "tsx scripts/test-supabase-connection.ts",
+    "check-env": "tsx scripts/check-env.ts"
   },
   "dependencies": {
     "@dazl/color-scheme": "^1.2.1",
@@ -49,7 +52,9 @@
     "@types/node": "22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "dotenv": "^17.2.3",
     "prettier": "^3.7.4",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
     "vite-tsconfig-paths": "^6.0.3"
@@ -60,5 +65,8 @@
   },
   "overrides": {
     "@radix-ui/react-primitive": "2.1.3"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
